--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2004,7 +2004,8 @@ aside.explore {
 // ***********************************************************************************************************************************
 // ***********************************************************************************************************************************
 
-.transactions-right {
+.transactions-right,
+.transactions-sidenav-right {
   min-height: calc(100vh - 132px);
 
   @media screen and (max-width: 1919px) {
