--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1558,16 +1558,26 @@ hr {
 
   &.all {
     position: fixed;
-    background: linear-gradient(to top, #fff, transparent);
     display: flex;
     justify-content: center;
     padding: 2rem 1rem;
     bottom: 0;
     left: 0;
     right: 0;
+    position: relative;
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: linear-gradient(to top, #fff, transparent);
+      z-index: 0;
+    }
 
     .btn {
       width: 100%;
+      z-index: 1;
 
       @media screen and (min-width: 576px) {
         max-width: 328px;
