--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1473,16 +1473,19 @@ select.list-dt:focus {
   left: 0px;
   bottom: 0px;
   padding-bottom: 20px;
-  background: linear-gradient(
+  /* background: linear-gradient(
     to top,
     #fff,
     rgba(255, 255, 255, 0.5) 50%,
     rgba(255, 255, 255, 0.5) 40%,
     rgba(255, 255, 255, 0.5) 100%
-  );
+  ); */
+  /* background: linear-gradient(to bottom, #fff, transparent); */
+  background: linear-gradient(to top, #fff, rgba(255, 255, 255, 0));
   display: block !important;
   opacity: 1 !important;
   z-index: 99;
+  overflow: hidden;
 }
 .stps1 {
   display: flex;
@@ -3476,7 +3479,8 @@ select.list-dt:focus {
   float: left;
 }
 .msoinvestproduct_box:hover .msoinvestproduct_box_right_p3 {
-  right: 10px;
+  /* right: 10px; */
+  right: 0;
 }
 .msoinvestproduct_box_right_p3 {
   position: absolute;
@@ -3490,6 +3494,9 @@ select.list-dt:focus {
   align-items: center;
   border-radius: 15px;
   background-image: url(../images/contabhbbg.svg);
+}
+.step5 .msoinvestproduct_box_right_p3 {
+  top: 0;
 }
 .msoinvestproduct_box_right_p3_s1 {
   float: right;
@@ -3517,6 +3524,20 @@ select.list-dt:focus {
 .msoinvestproduct_box_right_p3_s1 a:hover:nth-child(1) {
   background-image: url(../images/contabhb2h.svg);
 }
+
+.msoinvestproduct_box.step5 .msoinvestproduct_box_right_p3_s1 {
+  height: 100%;
+}
+
+.msoinvestproduct_box.step5 .msoinvestproduct_box_right_p3_s1 a:nth-child(1) {
+  background-image: url(../vector/redeem.svg);
+  height: 100%;
+  width: 96px;
+  background-repeat: no-repeat;
+  background-position-y: center;
+  margin-bottom: 0;
+}
+
 .msoinvestproduct_box_right_p3_s1 a:nth-child(3) {
   margin-bottom: 0px;
   background-image: url(../images/contabhb3.svg);
@@ -9500,5 +9521,11 @@ select.list-dt:focus {
 @media screen and (max-width: 370px) {
   .stepsidemenu_box .planyy_hed_p3 {
     margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 1920px) {
+  .fieldset_data {
+    max-height: calc(100vh - 190px);
   }
 }
