--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3228,6 +3228,10 @@ aside.explore {
   width: 75%;
 }
 
+#profile .deactivate .left p {
+  word-spacing: initial;
+}
+
 @media screen and (min-width: 1366px) {
   #profile .deactivate .left {
     max-width: 630px;
