--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -14,6 +14,12 @@
   }
 }
 
+@media (min-width: 992px) {
+  .d-992-none {
+    display: none !important;
+  }
+}
+
 @media (min-width: 769px) {
   .d-769-none {
     display: none !important;
